--- a/tutorials/index.adoc
+++ b/tutorials/index.adoc
@@ -34,13 +34,13 @@ xref:reprap#[RepRap], xref:git#[Git]
 
 |8. |04.04.2022 |xref:printing#[Tisk: Základy] |3
 
-|9. |11.04.2022 |xref:bridges#[Tisk: Mosty] |3
+|9. |11.04.2022 |xref:bridges#[Tisk: Mosty] 🚧 |3
 
 |🐤 |18.04.2022 |Velikonoční pondělí |🐇
 
-|10. |25.04.2022 |xref:supports#[Tisk: Podpory] |3
+|10. |25.04.2022 |xref:supports#[Tisk: Podpory] 🚧 |3
 
-|11. |02.05.2022 |xref:multicolor#[Tisk: Vícebarevný tisk] |3
+|11. |02.05.2022 |xref:multicolor#[Tisk: Vícebarevný tisk] 🚧 |3
 
 |12. |09.05.2022 |Tisk - co si přejete vyzkoušet ohledně semestrální práce |0
 
