--- a/tutorials/multicolor.adoc
+++ b/tutorials/multicolor.adoc
@@ -59,7 +59,7 @@ image::multicolor_cone.jpg[Kužel]
 
 == Postupy
 
-IMPORTANT: Pro dnešní cvičení si stáhněte obecný xref:slicing#config-file[Config Bundle pro Slic3r].
+IMPORTANT: Pro dnešní cvičení si stáhněte obecný xref:printing#config-file[Config Bundle pro Slic3r].
 
 WARNING: Dodržujte všechna bezpečnostní pravidla z xref:printing.adoc#[tiskového cvičení].
 Zejména nikoho neřezejte nožem a nesahejte na rozpálenou trysku tiskárny.
