--- a/tutorials/bridges.adoc
+++ b/tutorials/bridges.adoc
@@ -16,7 +16,7 @@ pak logicky tiskneme v 85 % času do vzduchu.
 Jak to tedy může fungovat?
 
 WARNING: Dodržujte všechna bezpečnostní pravidla z xref:printing.adoc#[minulého cvičení].
-Zejména nikoho nebodejte nožem a nepijte aceton.
+Zejména nikoho nebodejte šroubovákem a nepijte chemické čistící prostředky.
 
 == Mosty
 
@@ -78,7 +78,6 @@ Ohodnocení mostu je vždy vidět na jeho horní straně.
 
 NOTE: Pilíře mostu se musí udržet na tiskové desce.
 Použijte vhodné techniky, které znáte z kapitoly xref:slicing.adoc#structs[slicing].
-V případě potřeby aplikujte xref:printing.adoc#abs-juice[ABS Juice].
 
 WARNING: Zkontrolujte si, že pilíře nejsou plné, ale mají infill.
 V nastavení případně snižte hodnotu _Solid infill threshold area_.
